# Archantum

./: .env.example  .gitignore  Dockerfile  Polymarket_CheatSheet_v2.xlsx  README.md  docker-compose.yml  pyproject.toml
archantum/: __init__.py  __main__.py  config.py  main.py
archantum/alerts/: __init__.py  bot.py  telegram.py
archantum/analysis/: __init__.py  accuracy.py  arbitrage.py  certain_outcome.py  confluence.py  cross_platform.py  dependency.py  esports.py  historical.py  indicators.py  liquidity.py  lp_rewards.py  multi_outcome.py  new_market.py  paper_trading.py  price.py  resolution.py  risk_score.py  scoring.py  settlement.py  smartmoney.py  speed_tracker.py  trends.py  volume.py  wallet_strategy.py  whale.py
archantum/api/: __init__.py  chainlink.py  clob.py  data.py  gamma.py  hyperliquid.py  kalshi.py  websocket.py
archantum/cli/: __init__.py  dashboard.py
archantum/data/: __init__.py  source_manager.py  validator.py
archantum/db/: __init__.py  database.py  models.py
scripts/: btc_15m_backtest.py  btc_cheatsheet.md  btc_cheatsheet.xlsx  build_cheatsheet_excel.py  check_losses.py
